src/network_policies/test1default-rome-a2d9d22 Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test1default-rome-a2d9d22
  namespace: default-rome-a2d9d2
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: product-catalogue
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: milan
      podSelector: {}
    ports:
    - port: 80
      protocol: TCP
